--- a/src/styles/sources/partials/_colorPalette.scss
+++ b/src/styles/sources/partials/_colorPalette.scss
@@ -2,7 +2,7 @@
 $light-theme: (
   //Background color
   background-color: #f4f4f4,
-  header-background-color: darken(#f4f4f4, 5%),
+  header-background-color: #bae6f8,
   navBar-background-color: darken(#f4f4f4, 10%),
   
   //Text color
