--- a/src/styles/sources/components/Header.module.scss
+++ b/src/styles/sources/components/Header.module.scss
@@ -11,7 +11,7 @@
     text-align: center;
     border-bottom: 2px solid var(--secondary-color);
 
-    .header-title {
+    &-title {
         font-size: 24px;
         font-weight: bold;
         margin: 0 0 10px;
