--- a/src/styles/sources/components/Navbar.module.scss
+++ b/src/styles/sources/components/Navbar.module.scss
@@ -38,6 +38,7 @@
     .navbar-menu {
         list-style: none;
         display: flex;
+        justify-content: space-evenly;
         gap: 20px;
         margin: 0;
         padding: 0;
