--- a/src/styles/sources/components/Aside.module.scss
+++ b/src/styles/sources/components/Aside.module.scss
@@ -2,18 +2,17 @@
 @import '../partials/_mixins.scss';
 
 .aside {
-    display: none; // Masqué par défaut
+    display: none;
     background-color: var(--background-color);
     color: var(--text-color);
     padding: 20px;
     border-left: 2px solid var(--secondary-color);
-    flex: 0 0 25%; // L'aside occupe 1/4 de la largeur
-    max-width: 25%; // Limite la largeur maximale à 25%
+    flex: 0 0 25%;
+    max-width: 25%;
 
     @include media_Width(md) {
-        display: block; // Affiché sur les écrans >= tablette
-        
-        width: 300px;
+        display: block;
+        width: 30%;
         height: 100vh;
         overflow-y: auto;
     }
@@ -21,11 +20,6 @@
     h2 {
         font-size: 20px;
         margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 16px;
-        line-height: 1.5;
     }
 
     .asideHeader {
@@ -44,21 +38,7 @@
         padding: 10px;
     }
 
-    .debugButton {
-        display: block;
-        margin-bottom: 20px;
-        padding: 10px;
-        background-color: var(--secondary-color);
-        color: var(--text-color);
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        font-size: 14px;
-
-        &:hover {
-            background-color: var(--secondary-color);
-        }
-    }
+    
 
     .section {
         margin-bottom: 20px;
@@ -106,3 +86,5 @@
         }
     }
 }
+
+.rightside{}
