--- a/src/styles/sources/components/ListItems/BookItem.module.scss
+++ b/src/styles/sources/components/ListItems/BookItem.module.scss
@@ -102,7 +102,7 @@
             border: none;
             border-radius: 4px;
             background-color: var(--primary-color);
-            color: #fff;
+            color: #000000;
             font-size: 14px;
             cursor: pointer;
 
